# tinyconfig

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
cpp/: .gitignore  CmakeLists.txt  README.md  tinyconfig.cpp
example/: .gitignore  CMakeLists.txt  main.c  tiny.conf
include/: tinyconfig.h
src/: tinyconfig.c
tests/: .gitignore  CMakeLists.txt  README.md  main.c  test.conf  test2.conf
